# lilypond-midi-input

./: Cargo.toml  README.adoc  README.md  flake.nix
.github/workflows/: check.yml  docker-build.yml  pull-request.yml  release.yml  rust.yml
changelog/: CHANGELOG.0  CHANGELOG.1  CHANGELOG.2  CHANGELOG.3  CHANGELOG.4  CHANGELOG.5  CHANGELOG.6
docker/: Dockerfile_archlinux  Dockerfile_debian  Dockerfile_ubuntu
src/: lib.rs  lily.rs  main.rs  midi.rs  types.rs
src/lily/: accidentals.rs  errors.rs  keysignature.rs  language.rs  macros.rs  note.rs  octave_entry.rs  parameters.rs
src/midi/: errors.rs  types.rs
