[package]
name = "lilypond-midi-input"
version = "0.11.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive", "cargo"] }
getset = "0.1.6"
portmidi = "0.3.0"
regex = "1.9.4"
